syntax = "proto3";
package cmis;

import "google/protobuf/empty.proto";

option go_package="cmis";

message Repository {
  string name = 2;
  string description = 3;
  CmisObjectId root_folder_id = 4;
  repeated TypeDefinition type_definitions = 5;
}

message TypeDefinition {
  string name = 2;
  string description = 3;
  repeated PropertyDefinition property_definitions = 4;
}

message PropertyDefinition {
  string name = 1;
  string description = 2;
  string datatype = 3;
}

message CmisObject {
  CmisObjectId id = 1;
  TypeDefinition type_definition = 2;
  repeated CmisProperty properties = 3;
}

message CmisProperty {
  PropertyDefinition property_definition = 1;
  string value = 2;
}

message CmisResult {
  CmisObject object = 1;
  repeated CmisObject children = 2;
}

message CmisObjectId {
  string id = 1;
}

service CmisService {
  rpc getRepository (google.protobuf.Empty) returns (Repository);
  rpc getObject(CmisObjectId) returns (stream CmisResult);
  rpc createObject(CmisObject) returns (CmisObject);
  rpc deleteObject(CmisObject) returns (CmisObject);
}